BAŁTEX-2 Navbar + Slider

--- a/dev/jade/config/base.jade
+++ b/dev/jade/config/base.jade
@@ -42,6 +42,7 @@ html()&attributes({
             main#content-wrapper.content-wrapper
                 //- Nav bar
                 if nav_bar
+                    include ../includes/nav-bar
                 block page_content
             //- footer
             if footer
