--- a/dev/jade/config/config.jade
+++ b/dev/jade/config/config.jade
@@ -1,5 +1,5 @@
 //- Project name
-- var project_name       = "bolierplate"
+- var project_name       = "baltex"
 
 //- Basic page variables
 - var page_lang          = "en"
@@ -11,7 +11,7 @@
 //- Body classes
 - var body_classes       = ['css-animate dom-body']
 - var preloader          = false
-- var top_bar            = false
+- var top_bar            = true
 - var nav_bar            = true
 - var nav_mobile         = false
 - var nav_mobile_toggle  = false
