--- a/dev/sass/site/components/_components.scss
+++ b/dev/sass/site/components/_components.scss
@@ -1,2 +1,14 @@
 //- Cookies policy
 @import "comp-cookies-policy";
+
+//- Top bar
+@import "comp-nav-bar";
+
+//- Form searcher
+@import "comp-form-searcher";
+
+//- Forms
+@import "comp-forms";
+
+//- Main Slier
+@import "comp-main-slider";
