--- a/dev/sass/site/style.scss
+++ b/dev/sass/site/style.scss
@@ -7,6 +7,9 @@
 //- Import plugins
 @import "../plugins/site-plugins";
 
+//- Import core
+@import "core/core";
+
 //- Import helpers
 @import "helpers/helpers";
 
