--- a/dev/sass/bootstrap/_custom.scss
+++ b/dev/sass/bootstrap/_custom.scss
@@ -4,7 +4,32 @@
 // without modifying source files.
 $font-family-sans-serif	: 'Lato', sans-serif;
 $headings-font-family	: 'Oswald', sans-serif;
+$font-size-root			: 62.5%;
+$font-size-base			: 1.6rem;
+$font-size-h1			: 4.5rem;
+$font-size-h2			: 4.0rem;
+$font-size-h3			: 3.5rem;
+$font-size-h4			: 3.0rem;
+$font-size-h5			: 2.5rem;
+$font-size-h6			: 2.0rem;
 
 //- Paths
 $path_assets: '../../assets/';
 $path_images: $path_assets + 'images/';
+
+//- Colors
+$brand-primary		: #212a34;
+$brand-primary-light: #494f54;
+$brand-second		: #ff6200;
+$gray		  		: #c3c3c3;
+$gray-lighter		: #eceeef;
+
+//- Spacers
+$spacer-xs	: 1rem;
+$spacer-sm	: 2rem;
+$spacer		: 3rem;
+$spacer-md	: 4rem;
+$spacer-xl	: 5rem;
+
+//- Border radius
+$border-radius:	.4rem;
