--- a/dev/sass/css-animate/animate.scss
+++ b/dev/sass/css-animate/animate.scss
@@ -4,7 +4,7 @@ Licensed under the MIT license - http://opensource.org/licenses/MIT
 
 Copyright (c) 2015 Daniel Eden
 */
-.animated {
+.css-animate .animated {
 	-webkit-animation-duration: 1s;
 	animation-duration: 1s;
 	-webkit-animation-fill-mode: both;
