--- a/dev/sass/site/components/_components.scss
+++ b/dev/sass/site/components/_components.scss
@@ -12,3 +12,15 @@
 
 //- Main Slier
 @import "comp-main-slider";
+
+//- Buttons
+@import "comp-buttons";
+
+//- Section header
+@import "comp-section-header";
+
+//- Info box
+@import "comp-info-box";
+
+//- Slick carousel
+@import "comp-slick";
