--- a/dev/sass/site/components/_comp-main-slider.scss
+++ b/dev/sass/site/components/_comp-main-slider.scss
@@ -1,6 +1,14 @@
 .main-slider {
-	margin-top: -1px;
+	top: -1px;
+	cursor: col-resize;
+	.slick-list {
+		z-index: 8;
+	}
 	&__item {
+		position: relative;
+		background-size: cover;
+		background-position: 50% 50%;
+		min-height: 550px;
 		&--overlayed {
 			position: relative;
 			&:after {
@@ -15,25 +23,125 @@
 			}
 		}
 	}
+	&__inner {
+		position: relative;
+		z-index: 2;
+		padding-top: 90px;
+		@include media-breakpoint-down(sm) {
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			padding: 35px 0 100px 0;
+			background-color: $brand-primary;
+		}
+	}
+	&__title {
+		color: #fff;
+		font-size: $font-size-h1;
+		line-height: 1.4;
+		padding-bottom: $spacer-sm;
+		@include media-breakpoint-down(sm) {
+			font-size: $font-size-h5;
+		}
+	}
+	&__content {
+		max-width: $container-width-sm;
+	}
 	.slick-dots {
 		@include clearfix;
 		display: block;
 		max-width: 1110px;
 		margin: 0 auto;
+		text-align: center;
 		list-style-type: none;
 		padding: 0;
 		position: absolute;
 		left: 0;
 		right: 0;
-		bottom: $spacer-xs;
+		bottom: $spacer-sm;
 		li {
-			float: left;
+			@include transition;
+			position: relative;
+			display: inline-block;
 			width: 25%;
-			button {
-				display: block;
-				width: 100%;
+			background-color: $brand-primary;
+			cursor: pointer;
+			z-index: 10;
+			@include media-breakpoint-down(sm) {
+				width: 20px;
+				height: 20px;
+				border-radius: 50%;
+				margin: 0 8px;
+				border: 2px solid $brand-second;
+				background-color: transparent;
+			}
+			&.slick-active {
 				background-color: #fff;
-				border: 1px solid #fff;
+				color: $brand-primary;
+				cursor: default;
+				@include media-breakpoint-down(sm) {
+					background-color: $brand-second;
+				}
+			}
+			span {
+				@include transition;
+				display: block;
+				position: relative;
+				padding: $spacer-sm;
+				background-size: 100%;
+				background-position: 50% 50%;
+				@include media-breakpoint-down(sm) {
+					background-image: none !important; /* Nadpisanie JS'a */
+				}	
+				&:after {
+					content: '';
+					position: absolute;
+					top: 0;
+					right: 0;
+					bottom: 0;
+					left: 0;
+					background-color: rgba(red($brand-primary), green($brand-primary), blue($brand-primary), .8);
+					@include media-breakpoint-down(sm) {
+						display: none;
+					}
+				}
+				h6 {
+					position: relative;
+					margin: 0;
+					font-weight: 400;
+					font-size: $font-size-base;
+					z-index: 1;
+					transition: none;
+					color: #fff;
+					pointer-events:none;
+					@include media-breakpoint-down(sm) {
+						text-indent: -99999px;
+					}
+				}
+			}
+			&.slick-active {
+				span {
+					&:before {
+						content: '';
+						position: absolute;
+						left: 0;
+						right: 0;
+						bottom: 0;
+						height: 3px;
+						background-color: $brand-second;
+						z-index: 1;
+						@include media-breakpoint-down(sm) {
+							display: none;
+						}
+					}
+					&:after {
+						background-color: rgba(255,255,255,.8);
+					}
+					h6 {
+						color: $brand-primary;
+					}
+				}
 			}
 		}
 	}
