--- a/dev/sass/site/components/_comp-nav-bar.scss
+++ b/dev/sass/site/components/_comp-nav-bar.scss
@@ -1,19 +1,15 @@
 .nav-bar {
 	display: block;
-	padding: $spacer-xs 0 0;
+	background-color: $brand-primary;
+	border-bottom: 3px solid $brand-second;
 	&__source {
 		@include transition;
 		position: relative;
-		background-color: $brand-primary;
 		padding: $spacer 0;
 		border-radius: $border-radius;
-		border-bottom: 3px solid $brand-second;
 		&--active {
 			border-bottom: 0;
 		}
-	}
-	&__header {
-		padding-left: $grid-gutter-width-base/2;
 	}
 	&__title,
 	&__subtitle {
@@ -44,15 +40,15 @@
 		position: absolute;
 		top: 50%;
 		transform: translateY(-50%);
-		right: $grid-gutter-width-base/2;
+		right: 0;
 		margin: 0;
 	}
 	&__icon {
 		position: relative;
 		display: block;
-		color: $brand-primary;
+		color: #fff;
 		padding: $spacer-xs;
-		background-color: #fff;
+		background-color: $brand-second;
 		line-height: 1;
 		&:before {
 			@include transition;
@@ -71,14 +67,16 @@
 		    transition-delay: .1s;
 		}
 		&--active {
+			background-color: #fff;
+			color: $brand-second;
 			&:before {
 				opacity: 1;
 				transform: translateX(-50%);
 			}
 		}
 		&:hover {
-			background-color: $brand-second;
-			color: #fff;
+			background-color: #fff;
+			color: $brand-second;
 		}
 	}
 	&__search,
