--- a/dev/sass/plugins/site-plugins.scss
+++ b/dev/sass/plugins/site-plugins.scss
@@ -10,3 +10,6 @@
 
 //- Tooltipster
 @import "tooltipster/tooltipster";
+
+//- Custom scrollBar
+@import "custom-scroll-bar/jquery-custom-scroll-bar";
