--- a/dev/jade/index.jade
+++ b/dev/jade/index.jade
@@ -70,3 +70,4 @@ block page_content
 										img(src="" + path_image + "company-share.jpg")
 									.info-box__content
 										h5.info-box__title Udostępnij stronę
+										i.fa.fa-bookmark(aria-hidden="true")
