--- a/dev/jade/config/config.jade
+++ b/dev/jade/config/config.jade
@@ -6,7 +6,8 @@
 - var charset            = "utf-8"
 - var page_description   = "Boilerplate - demo description"
 - var page_author        = "Author"
-- var page_title         = "Boilerplate - demo titile"
+- var page_title         = "Bałtex. Transport międzynarodowy"
+- var page_image         = ""
 
 //- Body classes
 - var body_classes       = ['css-animate dom-body']
