--- a/dev/jade/includes/nav-bar.jade
+++ b/dev/jade/includes/nav-bar.jade
@@ -24,11 +24,11 @@ nav.component.nav-bar
 												i.fa.fa-envelope(aria-hidden="true")
 												span Kontakt
 										li
-											a(href="#", title="Wydrukuj stronę")
+											a(href="#", title="Wydrukuj stronę", class="js-window-print")
 												i.fa.fa-print(aria-hidden="true")
 												span Drukuj
 										li
-											a(href="#", title="Dodaj do ulubionych")
+											a(href="#", title="Dodaj do ulubionych", class="js-bookmark-application")
 												i.fa.fa-bookmark(aria-hidden="true")
 												span Ulubione
 									.nav-bar__divider
