--- a/dev/sass/site/components/_components.scss
+++ b/dev/sass/site/components/_components.scss
@@ -27,3 +27,9 @@
 
 //- Icons
 @import "comp-icons";
+
+//- Social side bar
+@import "comp-social-side-bar";
+
+//- Animated canvas
+@import "comp-animated-canvas";
