--- a/dev/sass/site/core/_layout.scss
+++ b/dev/sass/site/core/_layout.scss
@@ -1,8 +1,19 @@
 .section {
 	padding-top: $spacer-xl;
 	padding-bottom: $spacer-xl;
+	max-width: 1700px;
+	margin: 0 auto;
 	&--ghost {
 		padding: 0;
+	}
+	&--pattern {
+		background-image: url(#{$path_images}section-background.png);
+		background-repeat: repeat;
+    	background-size: 15px 15px;
+		border-top: 2px solid $gray-lighter;
+	}
+	&--full {
+		max-width: 100%;
 	}
 }
 img {
