--- a/dev/sass/site/components/_components.scss
+++ b/dev/sass/site/components/_components.scss
@@ -33,3 +33,9 @@
 
 //- Animated canvas
 @import "comp-animated-canvas";
+
+//- Feature box
+@import "comp-feature-box";
+
+//- Footer
+@import "comp-footer";
