--- a/dev/jade/config/base.jade
+++ b/dev/jade/config/base.jade
@@ -51,4 +51,5 @@ html()&attributes({
                 block page_content
             //- footer
             if footer
+                include ../includes/footer
         include ../js/scripts
