--- a/dev/sass/site/components/_comp-nav-bar.scss
+++ b/dev/sass/site/components/_comp-nav-bar.scss
@@ -2,6 +2,13 @@
 	display: block;
 	background-color: $brand-primary;
 	border-bottom: 3px solid $brand-second;
+	@include media-breakpoint-down(sm) {
+		position: fixed;
+		top: 0;
+		left: 0;
+		right: 0;
+		z-index: 19;
+	}
 	&__source {
 		@include transition;
 		position: relative;
@@ -9,6 +16,9 @@
 		border-radius: $border-radius;
 		&--active {
 			border-bottom: 0;
+		}
+		@include media-breakpoint-down(sm) {
+			padding: $spacer-sm 0;
 		}
 	}
 	&__title,
@@ -22,6 +32,9 @@
 		font-size: 1.6rem;
 		padding-top: $spacer-xs;
 		margin-left: -$spacer-xs;
+		@include media-breakpoint-down(sm) {
+			display: none;
+		}
 	}
 	&__sneakpeak {
 		@include text-decoration;
@@ -65,6 +78,9 @@
 	}
 	&__search {
 		padding-right: $spacer-xs;
+		@include media-breakpoint-down(sm) {
+			display: none;
+		}
 	}
 	&__dropdown {
 		position: absolute;
