--- a/dev/sass/site/components/_comp-slick.scss
+++ b/dev/sass/site/components/_comp-slick.scss
@@ -29,6 +29,9 @@
 				width: 10px;
 				height: 10px;
 				margin: 0 5px;
+				&:last-child {
+					margin-right: 0;
+				}
 				button {
 					border-radius: 50%;
 					text-indent: -9999px;
