--- a/dev/sass/site/core/_layout.scss
+++ b/dev/sass/site/core/_layout.scss
@@ -1,3 +1,8 @@
+body {
+	@include media-breakpoint-down(sm) {
+		padding-top: 71px;
+	}
+}
 .section {
 	padding-top: $spacer-xl;
 	padding-bottom: $spacer-xl;
@@ -14,6 +19,12 @@
 	}
 	&--full {
 		max-width: 100%;
+	}
+	&--motive {
+		background-color: $brand-primary;
+	}
+	&--bottom0 {
+		padding-bottom: 0;
 	}
 }
 img {
