--- a/dev/jade/includes/footer.jade
+++ b/dev/jade/includes/footer.jade
@@ -6,10 +6,6 @@ footer.footer
 			.col-md-5
 				.widget.widget--footer
 					.widget-inner
-						h5.widget_title Informacje kontaktowe	
-			.col-md-4
-				.widget.widget--footer
-					.widget-inner
 						h5.widget_title Firma Bałtex
 						ul.list-unstyled
 							li: a(href="#", title="Transport międzynarodowy") Transport międzynarodowy
@@ -17,3 +13,20 @@ footer.footer
 							li: a(href="#", title="Magazyn czasowego składowania") Magazyn czasowego składowania
 							li: a(href="#", title="Faq") FAQ		
 							li: a(href="#", title="Kontakt") Kontakt
+			.col-md-4
+				.widget.widget--footer
+					.widget-inner
+						h5.widget_title Informacje kontaktowe
+	.footer-post
+		.container
+			.row
+				.col-xs-12
+					.footer-post__inner
+						.footer-post__brand
+							h5.footer-post__logo Bałtex FHU #[sup &#174;]
+						.footer-post__list
+							ul.list-unstyled
+								li.footer-post__element
+									a(href="#", title="Polityka cookies", class="footer-post__anchor link") Polityka cookies
+								li.footer-post__element
+									a(href="#", title="Mapa strony", class="footer-post__anchor link") Mapa strony
