--- a/dev/jade/index.jade
+++ b/dev/jade/index.jade
@@ -91,7 +91,7 @@ block page_content
 				.col-xs-12
 					header.text-xs-center.text-white
 						h3 Piszą..., a Ty czytaj
-						h4 Różne rzeczy, czasem lepsze, czasem 
+						h4 Dowiedz się w jaki sposób jesteśmy postrzegani przez innych 
 						p &nbsp;
 			.row
 				.col-xs-12
