--- a/dev/sass/site/components/_components.scss
+++ b/dev/sass/site/components/_components.scss
@@ -39,3 +39,12 @@
 
 //- Footer
 @import "comp-footer";
+
+//- Lists
+@import "comp-lists";
+
+//- Address
+@import "comp-address";
+
+//- Modal
+@import "comp-modal";
